fix: hover clipped by timeline

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -92,7 +92,7 @@ footer {
 }
 
 .meicycle-wrapper svg {
-  margin-top: -30px;
+  margin-top: -20px;
 }
 
 .chart {
